--- a/10 - Angles and Triangles.tex
+++ b/10 - Angles and Triangles.tex
@@ -918,31 +918,32 @@
         \item How many scalene triangles have all sides of integral lengths and perimeter less than $15$?
         \item On sides $AB$ and $AC$ of $\triangle ABC$, we pick points $D$ and $E$, respectively, so that
         $DE \parallel BC$. If $AB = 3AD$ and $DE = 6$, find $BC$.
-        \item A polygon has $N$ sides and $q$ obtuse interior angles. Each of its obtuse interior angles has a measure $150°$ and each of its acute interior angles has measure $80°$. How many sides does the polygon have?
+        \item Let $\angle ABC = 24°$ and $\angle ABD = 20°$. What is the smallest possible degree measure for $\angle CBD$? % 2012 AMC 10A Problems/Problem 4
         \seti
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
+        \item A polygon has $N$ sides and $q$ obtuse interior angles. Each of its obtuse interior angles has a measure $150°$ and each of its acute interior angles has measure $80°$. How many sides does the polygon have?
         \item In how many ways can we form a nondegenerate triangle by choosing three distinct
         numbers from the set $\{1,\ 2,\ 3,\ 4,\ 5\}$ as the sides?
-        \item The circumference of the circle with center $O$ is divided into 12 equal arcs. What is the number of degrees in the sum of the angles $x$ and $y$? 
-        \begin{center}
-          \leavevmode
-          \begin{mplibcode}
-            u = 0.35cm;
-            path c;
-            c := circle(origin, 3u);
-            draw c;
-            for i := 0 upto 11:
-              Dot (point i*1/3 of c);
-            endfor;
-            draw origin--(point 4/3 of c)--(point 0 of c)--origin--(point 8/3 of c)--(point 10/3 of c)--origin;
-            labelarcs(origin, (point 4/3 of c), (point 0 of c), 13, "$x$");
-            labelarcs2((point 8/3 of c), (point 10/3 of c), origin, 10, "$y$");
-          \end{mplibcode} %AMC 8 2014 Problem 15
-        \end{center}
+        %\item The circumference of the circle with center $O$ is divided into 12 equal arcs. What is the number of degrees in the sum of the angles $x$ and $y$? 
+        % \begin{center}
+        %   \leavevmode
+        %   \begin{mplibcode}
+        %     u = 0.35cm;
+        %     path c;
+        %     c := circle(origin, 3u);
+        %     draw c;
+        %     for i := 0 upto 11:
+        %       Dot (point i*1/3 of c);
+        %     endfor;
+        %     draw origin--(point 4/3 of c)--(point 0 of c)--origin--(point 8/3 of c)--(point 10/3 of c)--origin;
+        %     labelarcs(origin, (point 4/3 of c), (point 0 of c), 13, "$x$");
+        %     labelarcs2((point 8/3 of c), (point 10/3 of c), origin, 10, "$y$");
+        %   \end{mplibcode} %AMC 8 2014 Problem 15
+        % \end{center}
         \item The ratio of the measures of two acute angles is $5:4$, and the complement of one of these two angles is twice as large as the complement of the other. What is the sum of the degree measures of the two angles? % AMC 10b 2016 Problem 7
       \end{enumerate}
     \end{column}
@@ -953,7 +954,8 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item Let $\triangle ABC$ be an isosceles triangle with $BC = AC$ and $\angle ACB = 40°$. Construct the circle with diameter $\overline{BC}$, and let $D$ and $E$ be the other intersection points of the circle with the sides $\overline{AC}$ and $\overline{AB}$, respectively. Let $F$ be the intersection of the diagonals of the quadrilateral $BCDE$. What is the degree measure of $\angle BFC$ ?  %AMC 10a 2019 Problem 13
+        \item Joy has $30$ thin rods, one each of every integer length from $1$ cm through $30$ cm. She places the rods with lengths $3$ cm, $7$ cm, and $15$ cm on a table. She then wants to choose a fourth rod that she can put with these three to form a quadrilateral with positive area. How many of the remaining rods can she choose as the fourth rod? % 2017 AMC 10A Problems/Problem 10
+        % \item Let $\triangle ABC$ be an isosceles triangle with $BC = AC$ and $\angle ACB = 40°$. Construct the circle with diameter $\overline{BC}$, and let $D$ and $E$ be the other intersection points of the circle with the sides $\overline{AC}$ and $\overline{AB}$, respectively. Let $F$ be the intersection of the diagonals of the quadrilateral $BCDE$. What is the degree measure of $\angle BFC$ ?  %AMC 10a 2019 Problem 13
         \item Right triangle $ABC$ has leg lengths $AB=20$ and $BC=21$. Including $\overline{AB}$ and $\overline{BC}$, how many line segments with integer length can be drawn from vertex $B$ to a point on hypotenuse $\overline{AC}$? %2018 AMC 10A Problems/Problem 16
         \seti
       \end{enumerate}
@@ -962,7 +964,7 @@
       \begin{enumerate}
         \conti
         \item A square with side length $x$ is inscribed in a right triangle with sides of length $3$, $4$, and $5$ so that one vertex of the square coincides with the right-angle vertex of the triangle. A square with side length $y$ is inscribed in another right triangle with sides of length $3$, $4$, and $5$ so that one side of the square lies on the hypotenuse of the triangle. What is $\dfrac{x}{y}$? % 2017 AMC 10A Problems/Problem 21
-        \item Quadrilateral $ABCD$ has $AB = BC = CD$, angle $ABC = 70$ and angle $BCD = 170$. What is the measure of angle $BAD$? % 2008 AMC 10B Problems/Problem 24
+        \item Quadrilateral $ABCD$ has $AB = BC = CD$, angle $ABC = 70°$ and angle $BCD = 170°$. What is the measure of angle $BAD$? % 2008 AMC 10B Problems/Problem 24
       \end{enumerate}
     \end{column}
   \end{columns}
